--- a/newsroom/speeches/_posts/2022-01-26-post-2020.md
+++ b/newsroom/speeches/_posts/2022-01-26-post-2020.md
@@ -5,3 +5,8 @@ date: 2022-01-26
 layout: post
 description: ""
 ---
+April 2020
+
+7 April 2020
+
+[Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB](/files/pdf-speeches/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf)
