--- a/_newsroom/Speeches/2020.md
+++ b/_newsroom/Speeches/2020.md
@@ -6,10 +6,8 @@ layout: post
 description: ""
 third_nav_title: Speeches
 ---
-April 2020
+<b>April 2020</b>
 
 7 April 2020
-
-[Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB](/files/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf)
 
 [Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB](/files/pdf-speeches/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf)
