--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -4,3 +4,10 @@ permalink: /newsroom/Speeches/2019
 description: ""
 third_nav_title: Speeches
 ---
+<b>April 2019</b><br><br>
+16 April 2019<br>
+Speech on Workfare by Minister of State Zaqy Mohamad at MOM Workplan Seminar 2019  (397KB)
+
+<b>March 2019</b><br><br>
+6 March 2019<br>
+MOM Joint Segment Inequality COS Speech  (369KB)
