--- a/_newsroom/Speeches/2020.md
+++ b/_newsroom/Speeches/2020.md
@@ -6,8 +6,19 @@ layout: post
 description: ""
 third_nav_title: Speeches
 ---
+<img class="micicon" src="/images/speeches/ico_speeches.png" align="left"><br><br><br>
+
+</img>
+
 <b>April 2020</b>
 
 7 April 2020
 
 [Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB](/files/pdf-speeches/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf)
+
+<style>
+img.micicon {
+  height: 15%;
+  width: 15%;
+}
+</style>
