--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -4,6 +4,9 @@ permalink: /newsroom/Speeches/2019
 description: ""
 third_nav_title: Speeches
 ---
+<img class="micicon" src="/images/speeches/ico_speeches.png" align="left"><br><br><br>
+
+
 <b>April 2019</b><br><br>
 16 April 2019<br>
 Speech on Workfare by Minister of State Zaqy Mohamad at MOM Workplan Seminar 2019  (397KB)
