--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -14,3 +14,10 @@ Speech on Workfare by Minister of State Zaqy Mohamad at MOM Workplan Seminar 201
 <b>March 2019</b><br><br>
 6 March 2019<br>
 MOM Joint Segment Inequality COS Speech  (369KB)
+
+<style>
+img.micicon {
+  height: 15%;
+  width: 15%;
+}
+</style>
