--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -7,14 +7,13 @@ third_nav_title: Speeches
 <img class="micicon" src="/images/speeches/ico_speeches.png" align="left"><br><br><br>
 
 
-<b>April 2019</b><br><br>
+<font size="+2"><b>April 2019</b></font><br><br>
 16 April 2019<br>
-Speech on Workfare by Minister of State Zaqy Mohamad at MOM Workplan Seminar 2019  (397KB)
+[Speech on Workfare by Minister of State Zaqy Mohamad at MOM Workplan Seminar 2019  (397KB)](/files/pdf-speeches/Speech%20on%20Workfare%20by%20Minister%20of%20State%20Zaqy%20Mohamad%20at%20MOM%20Workplan%20Seminar%202019.pdf)
 
-<b>March 2019</b><br><br>
+<font size="+2"><b>March 2019</b></font><br><br>
 6 March 2019<br>
-MOM Joint Segment Inequality COS Speech  (369KB)
-
+[MOM Joint Segment Inequality COS Speech  (369KB)](/files/pdf-speeches/MOM%20Joint%20Segment%20Inequality%20COS%20Speech.pdf)
 <style>
 img.micicon {
   height: 15%;
