--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -4,7 +4,7 @@ permalink: /newsroom/Speeches/2019
 description: ""
 third_nav_title: Speeches
 ---
-<img class="micicon" src="/images/speeches/ico_speeches.png" align="left"><br><br><br>
+<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><br><br>
 
 
 <font size="+2"><b>April 2019</b></font><br><br>
@@ -15,7 +15,7 @@ third_nav_title: Speeches
 6 March 2019<br>
 [MOM Joint Segment Inequality COS Speech  (369KB)](/files/pdf-speeches/MOM%20Joint%20Segment%20Inequality%20COS%20Speech.pdf)
 <style>
-img.micicon {
+img.MicIcon {
   height: 15%;
   width: 15%;
 }
