--- a/_newsroom/Speeches/2020.md
+++ b/_newsroom/Speeches/2020.md
@@ -6,7 +6,7 @@ layout: post
 description: ""
 third_nav_title: Speeches
 ---
-<img class="micicon" src="/images/speeches/ico_speeches.png" align="left"><br><br><br>
+<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><br><br>
 
 </img>
 
@@ -17,7 +17,7 @@ third_nav_title: Speeches
 [Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB](/files/pdf-speeches/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf)
 
 <style>
-img.micicon {
+img.MicIcon {
   height: 15%;
   width: 15%;
 }
