--- a/_newsroom/Press Release/2010.md
+++ b/_newsroom/Press Release/2010.md
@@ -4,11 +4,21 @@ permalink: /newsroom/Press-Release/2010
 description: ""
 third_nav_title: Press Release
 ---
-July 2010<br>
+<img align="left"
+src="/images/icons/ico_media_articles.png"
+class="PressReleaseIcon">
+<br>
+<font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press
+Releases</font><br><br>
+
+<font size="+2"><b>July 2010</b></font><br>		 
+
 27 July 2010<br>
 link not found (WSG)
 
-June 2010<br>
+<font size="+2"><b>June 2010</b></font><br>
+
+
 27 June 2010<br>1st link not found (WSG)
 
 27 June 2010<br>
