--- a/_newsroom/Press Release/2009.md
+++ b/_newsroom/Press Release/2009.md
@@ -4,3 +4,14 @@ permalink: /newsroom/Press-Release/2009
 description: ""
 third_nav_title: Press Release
 ---
+<img align="left"
+src="/images/icons/ico_media_articles.png"
+class="PressReleaseIcon">
+<br>
+<font align="center" color="green"
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+
+<font size="+2"><b>February 2019</b></font><br>
+
+28 February 2019<br>
+[271,000 employees to receive $343 million in Workfare for work done in 2008](https://www.mom.gov.sg/newsroom/press-releases/2009/271000-employees-to-receive-343-million-in-workfare-for-work-done-in-2008)
