--- a/_newsroom/Speeches/2020.md
+++ b/_newsroom/Speeches/2020.md
@@ -14,6 +14,8 @@ third_nav_title: Speeches
 
 7 April 2020
 
+<a class="hyperlink" href="https://cms.isomer.gov.sg/files/pdf-speeches/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf">Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB</a>
+
 [Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB](/files/pdf-speeches/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf)
 
 <style>
@@ -21,4 +23,9 @@ img.MicIcon {
   height: 15%;
   width: 15%;
 }
+	
+a.hyperlink {
+	color:green
+	}
+	
 </style>
