--- a/_newsroom/Press Release/2010.md
+++ b/_newsroom/Press Release/2010.md
@@ -23,3 +23,10 @@ link not found (WSG)
 
 27 June 2010<br>
 [Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme](https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme)
+
+<style>
+img.PressReleaseIcon {
+  height: 15%;
+  width: 15%;
+}
+</style>
