--- a/_newsroom/Press Release/2009.md
+++ b/_newsroom/Press Release/2009.md
@@ -15,3 +15,10 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 28 February 2019<br>
 [271,000 employees to receive $343 million in Workfare for work done in 2008](https://www.mom.gov.sg/newsroom/press-releases/2009/271000-employees-to-receive-343-million-in-workfare-for-work-done-in-2008)
+
+<style>
+img.PressReleaseIcon {
+  height: 15%;
+  width: 15%;
+}
+</style>
