--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -4,3 +4,19 @@ permalink: /newsroom/Press-Release/2007
 description: ""
 third_nav_title: Press Release
 ---
+<img align="left"
+src="/images/icons/ico_media_articles.png"
+class="PressReleaseIcon">
+<br>
+<font align="center" color="green"
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+
+<font size="+2"><b>December 2007</b></font><br>
+
+28 December 2007<br>
+[287,000 Workers to Receive $146 Million in Workfare Income Supplements on 1 Jan 2008](https://www.mom.gov.sg/newsroom/press-releases/2007/287000-workers-to-receive-146-million-in-workfare-income-supplements-on-1-jan-2008)
+
+<font size="+2"><b>November 2007</b></font><br>
+
+14 November 2007<br>
+[Revised Annual Value (AV) Cut-Off for Workfare Income Supplement Payments in 2009](https://www.mom.gov.sg/newsroom/press-releases/2007/revised-annual-value-av-cutoff-for-workfare-income-supplement-payments-in-2009)
