--- a/_newsroom/Press Release/2013.md
+++ b/_newsroom/Press Release/2013.md
@@ -4,3 +4,19 @@ permalink: /newsroom/Press-Release/2013
 description: ""
 third_nav_title: Press Release
 ---
+<img align="left"
+src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
+<br>
+<font align="center" color="green"
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+
+<font size="+2"><b>June 2013</b></font><br>
+
+6 June 2013<br>
+link not found (WSG)
+
+<font size="+2"><b>January 2013</b></font><br>
+
+1 January 2013<br>
+
+											
