--- a/_newsroom/Press Release/2012.md
+++ b/_newsroom/Press Release/2012.md
@@ -4,3 +4,9 @@ permalink: /newsroom/Press-Release/2012
 description: ""
 third_nav_title: Press Release
 ---
+<img align="left"
+src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
+<br>
+<font align="center" color="green"
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+
