--- a/_newsroom/Press Release/2010.md
+++ b/_newsroom/Press Release/2010.md
@@ -24,6 +24,11 @@ link not found (WSG)
 27 June 2010<br>
 [Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme](https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme)
 
+<font size="+2"><b>April 2010</b></font><br>
+
+13 April 2010<br>
+link not found (WSG)
+
 <style>
 img.PressReleaseIcon {
   height: 15%;
