--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -20,3 +20,8 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 14 November 2007<br>
 [Revised Annual Value (AV) Cut-Off for Workfare Income Supplement Payments in 2009](https://www.mom.gov.sg/newsroom/press-releases/2007/revised-annual-value-av-cutoff-for-workfare-income-supplement-payments-in-2009)
+
+<font size="+2"><b>August 2007</b></font><br>
+
+28 August 2007<br>
+[Low-wage SEPs and Informal Workers Can Register at Singapore Post Branches to Qualify for Workfare Income Supplements](https://www.mom.gov.sg/newsroom/press-releases/2007/low-wage-seps-and-informal-workers-can-register-at-singapore-post-branches-to-qualify-for-workfare-income-supplements)
