--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -25,3 +25,13 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 28 August 2007<br>
 [Low-wage SEPs and Informal Workers Can Register at Singapore Post Branches to Qualify for Workfare Income Supplements](https://www.mom.gov.sg/newsroom/press-releases/2007/low-wage-seps-and-informal-workers-can-register-at-singapore-post-branches-to-qualify-for-workfare-income-supplements)
+
+<font size="+2"><b>May 2007</b></font><br>
+
+17 May 2007<br>
+link not found (WSG)
+
+<font size="+2"><b>February 2007</b></font><br>
+
+16 February 2007<br>
+[CPF Changes and Workfare for Low Wage Workers](https://www.mom.gov.sg/newsroom/press-releases/2007/cpf-changes-and-workfare-for-low-wage-workers)
