--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -35,3 +35,8 @@ link not found (WSG)
 
 16 February 2007<br>
 [CPF Changes and Workfare for Low Wage Workers](https://www.mom.gov.sg/newsroom/press-releases/2007/cpf-changes-and-workfare-for-low-wage-workers)
+
+<font size="+2"><b>January 2007</b></font><br>
+
+30 January 2007<br>
+[Declarations for Final Portion of Workfare Bonus Scheme to Begin on 1 February 2007](https://www.mom.gov.sg/newsroom/press-releases/2007/declarations-for-final-portion-of-workfare-bonus-scheme-to-begin-on-1-february-2007)
