--- a/_newsroom/Press Release/2016.md
+++ b/_newsroom/Press Release/2016.md
@@ -14,3 +14,10 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 24 March 2016<br>
 [Factsheet on Enhancements to Workfare 39KB)](/files/pdf-press-release/mar-2016/Factsheet%20on%20Enhancements%20to%20Workfare.pdf)
+
+<style>
+img.PressReleaseIcon {
+height:15%
+width:15%
+}
+</style>
