--- a/_newsroom/Press Release/2016.md
+++ b/_newsroom/Press Release/2016.md
@@ -17,7 +17,7 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 <style>
 img.PressReleaseIcon {
-height:15%
-width:15%
+height:15%;
+width:15%;
 }
 </style>
