--- a/_newsroom/Press Release/2013.md
+++ b/_newsroom/Press Release/2013.md
@@ -19,3 +19,10 @@ link not found (WSG)
 
 1 January 2013<br>
 [Factsheet on changes to the Workfare Income Supplement Scheme and CPF contribute rates for low-wage workers (87KB)](/files/pdf-press-release/jan-2013/FACTSHEET%20ON%20CHANGES%20TO%20THE%20WORKFARE%20INCOME%20SUPPLEMENT%20SCHEME%20AND%20CPF%20CONTRIBUTION%20RATES%20FOR%20LOW%20WAGE%20WORKERS.pdf)
+
+<style>
+img.PressReleaseIcon {
+height:15%;
+width:15%;
+}
+</style>
