--- a/_newsroom/Press Release/2012.md
+++ b/_newsroom/Press Release/2012.md
@@ -14,3 +14,10 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 1 January 2012<br>
 [Factsheet on changes in payment frequency of the Workfare Income Supplement Scheme (127.1KB)](/files/pdf-press-release/jan-2012/COS%20Factsheet%20-%20Changes%20in%20Payment%20Frequency%20of%20Workfare%20Income%20Supplement%20Scheme.pdf)
+
+<style>
+img.PressReleaseIcon {
+height:15%;
+width:15%;
+}
+</style>
