--- a/_newsroom/Speeches/2020.md
+++ b/_newsroom/Speeches/2020.md
@@ -6,25 +6,19 @@ layout: post
 description: ""
 third_nav_title: Speeches
 ---
-
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><br><br>
 
-<font size="+2"><b>April 2020</b></font><br>
 
-7 April 2020
+<font size="+2"><b>April 2019</b></font><br><br>
+16 April 2019<br>
+[Speech on Workfare by Minister of State Zaqy Mohamad at MOM Workplan Seminar 2019  (397KB)](/files/pdf-speeches/2019/april/Speech%20on%20Workfare%20by%20Minister%20of%20State%20Zaqy%20Mohamad%20at%20MOM%20Workplan%20Seminar%202019.pdf)
 
-<a class="hyperlink" href="https://cms.isomer.gov.sg/files/pdf-speeches/2020/april/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf">Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB</a>
-
-[Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152) KB](/files/pdf-speeches/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf)
-
+<font size="+2"><b>March 2019</b></font><br><br>
+6 March 2019<br>
+[MOM Joint Segment Inequality COS Speech  (369KB)](/files/pdf-speeches/2019/april/MOM%20Joint%20Segment%20Inequality%20COS%20Speech.pdf)
 <style>
 img.MicIcon {
   height: 15%;
   width: 15%;
 }
-	
-a.hyperlink {
-	color:green
-	}
-	
 </style>
