--- a/_newsroom/Press Release/2011.md
+++ b/_newsroom/Press Release/2011.md
@@ -15,3 +15,9 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 26 March 2011<br>
 link not found (WSG)
+<style>
+img.PressReleaseIcon {
+  height: 15%;
+  width: 15%;
+}
+</style>
