--- a/_newsroom/Speeches/2020.md
+++ b/_newsroom/Speeches/2020.md
@@ -4,7 +4,8 @@ permalink: /newsroom/Speeches/permalink
 description: ""
 third_nav_title: Speeches
 ---
-<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
+<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
+<br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
 
 
 <font size="+2"><b>April 2020</b></font><br><br>
