--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -4,15 +4,10 @@ permalink: /Newsroom/Speeches/2019
 description: ""
 third_nav_title: Speeches
 ---
-
-
-<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><br><br>
-
-
+<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
 <font size="+2"><b>April 2019</b></font><br><br>
 16 April 2019<br>
-[Speech on Workfare by Minister of State Zaqy Mohamad at MOM Workplan Seminar 2019  (397KB)](/files/pdf-speeches/2019/april/Speech%20on%20Workfare%20by%20Minister%20of%20State%20Zaqy%20Mohamad%20at%20MOM%20Workplan%20Seminar%202019.pdf)
-
+[Speech on Workfare by Minister of State Zaqy Mohamad at MOM Workplan Seminar 2019  (397KB)](/files/pdf-speeches/2019/april/Speech%20on%20Workfare%20by%20Minister%20of%20State%20Zaqy%20Mohamad%20at%20MOM%20Workplan%20Seminar%202019.pdf)<br><br>
 <font size="+2"><b>March 2019</b></font><br><br>
 6 March 2019<br>
 [MOM Joint Segment Inequality COS Speech  (369KB)](/files/pdf-speeches/2019/april/MOM%20Joint%20Segment%20Inequality%20COS%20Speech.pdf)
