--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -40,3 +40,9 @@ link not found (WSG)
 
 30 January 2007<br>
 [Declarations for Final Portion of Workfare Bonus Scheme to Begin on 1 February 2007](https://www.mom.gov.sg/newsroom/press-releases/2007/declarations-for-final-portion-of-workfare-bonus-scheme-to-begin-on-1-february-2007)
+<style>
+img.PressReleaseIcon {
+  height: 15%;
+  width: 15%;
+}
+</style>
