--- a/_newsroom/Speeches/2020.md
+++ b/_newsroom/Speeches/2020.md
@@ -11,7 +11,9 @@ third_nav_title: Speeches
 <a class="hyperlink" href="/files/pdf-speeches/2020/april/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf">Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152KB)</a>
 <style>
 br { 
-	display:block; margin-top:10px; line-height:22px; 
+	display:block; 
+	margin-top:10px; 
+	line-height:22px; 
 	}
 img.MicIcon {
   height: 15%;
