--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -11,7 +11,13 @@ third_nav_title: Speeches
 <font size="+2"><b>March 2019</b></font><br><br>
 6 March 2019<br>
 [MOM Joint Segment Inequality COS Speech  (369KB)](/files/pdf-speeches/2019/april/MOM%20Joint%20Segment%20Inequality%20COS%20Speech.pdf)
+
 <style>
+br { 
+	display:block; 
+	margin-top:10px; 
+	line-height:22px; 
+}
 img.MicIcon {
   height: 15%;
   width: 15%;
