--- a/_newsroom/Press Release/2010.md
+++ b/_newsroom/Press Release/2010.md
@@ -10,24 +10,9 @@ class="PressReleaseIcon">
 <br>
 <font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press
 Releases</font><br><br>
-
-<font size="+2"><b>July 2010</b></font><br>		 
-
-27 July 2010<br>
-link not found (WSG)
-
-<font size="+2"><b>June 2010</b></font><br>
-
-
-27 June 2010<br>1st link not found (WSG)
-
+<b>June</b><br>
 27 June 2010<br>
 [Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme](https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme)
-
-<font size="+2"><b>April 2010</b></font><br>
-
-13 April 2010<br>
-link not found (WSG)
 
 <style>
 img.PressReleaseIcon {
