--- a/_newsroom/Press Release/2019.md
+++ b/_newsroom/Press Release/2019.md
@@ -10,10 +10,10 @@ third_nav_title: Press Release
 
 <font size="+2"><b>December 2019</b></font><br>
 4 December 2019<br>
-[Workfare Factsheet (English) (151KB)](/files/pdf-press-release/dec-2019/Workfare%20Factsheet-English.pdf)
+<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-English.pdf">Workfare Factsheet (English) (151KB)</a>
 
 4 December 2019<br>
-[Workfare Factsheet (Chinese) (265KB)](/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Chinese.pdf)
+<a class="hyperlink" href=/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Chinese.pdf>Workfare Factsheet (Chinese) (265KB)</a>
 
 4 December 2019<br>
 [Workfare Factsheet (Malay) (151KB)](/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Malay.pdf)
@@ -34,4 +34,10 @@ img.PressReleaseIcon {
   height: 15%;
   width: 15%;
 }
+ a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+  }
 </style>
