--- a/_newsroom/Press Release/2019.md
+++ b/_newsroom/Press Release/2019.md
@@ -16,7 +16,7 @@ third_nav_title: Press Release
 <a class="hyperlink" href=/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Chinese.pdf>Workfare Factsheet (Chinese) (265KB)</a>
 
 4 December 2019<br>
-[Workfare Factsheet (Malay) (151KB)](/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Malay.pdf)
+<a class="hyperlink" href=/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Malay.pdf>Workfare Factsheet (Malay) (151KB)</a>
 
 4 December 2019 <br>
 [Workfare Factsheet (Tamil) (885KB)](/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Tamil.pdf)
