--- a/_newsroom/Press Release/2019.md
+++ b/_newsroom/Press Release/2019.md
@@ -19,7 +19,7 @@ third_nav_title: Press Release
 <a class="hyperlink" href=/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Malay.pdf>Workfare Factsheet (Malay) (151KB)</a>
 
 4 December 2019 <br>
-[Workfare Factsheet (Tamil) (885KB)](/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Tamil.pdf)
+<a class="hyperlink" href=/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Tamil.pdf>Workfare Factsheet (Tamil) (885KB)</a>
 
 <br><font size="+2"><b>March 2019</b></font><br>
 6 March 2019<br>
