--- a/_newsroom/Press Release/2022.md
+++ b/_newsroom/Press Release/2022.md
@@ -4,3 +4,11 @@ permalink: /newsroom/Press-Release/2022
 description: ""
 third_nav_title: Press Release
 ---
+<style>
+a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+  }
+</style>
