--- a/_newsroom/Press Release/2022.md
+++ b/_newsroom/Press Release/2022.md
@@ -4,6 +4,11 @@ permalink: /newsroom/Press-Release/2022
 description: ""
 third_nav_title: Press Release
 ---
+<img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
+<br>
+<font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+
+<font size="+2"><b>December 2019</b></font><br>
 <style>
 a.hyperlink {
     color:green;
