--- a/_newsroom/Press Release/2022.md
+++ b/_newsroom/Press Release/2022.md
@@ -10,6 +10,10 @@ third_nav_title: Press Release
 
 <font size="+2"><b>December 2019</b></font><br>
 <style>
+img.PressReleaseIcon {
+  height: 15%;
+  width: 15%;
+}
 a.hyperlink {
     color:green;
   }
