--- a/_newsroom/Press Release/2013.md
+++ b/_newsroom/Press Release/2013.md
@@ -11,11 +11,17 @@ src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 <font size="+2"><b>January 2013</b></font><br>
 1 January 2013<br>
-[Factsheet on changes to the Workfare Income Supplement Scheme and CPF contribute rates for low-wage workers (87KB)](/files/pdf-press-release/jan-2013/FACTSHEET%20ON%20CHANGES%20TO%20THE%20WORKFARE%20INCOME%20SUPPLEMENT%20SCHEME%20AND%20CPF%20CONTRIBUTION%20RATES%20FOR%20LOW%20WAGE%20WORKERS.pdf)
+<a class="hyperlink" href="/files/pdf-press-release/jan-2013/FACTSHEET%20ON%20CHANGES%20TO%20THE%20WORKFARE%20INCOME%20SUPPLEMENT%20SCHEME%20AND%20CPF%20CONTRIBUTION%20RATES%20FOR%20LOW%20WAGE%20WORKERS.pdf">Factsheet on changes to the Workfare Income Supplement Scheme and CPF contribute rates for low-wage workers (87KB)</a>
 
 <style>
 img.PressReleaseIcon {
 height:15%;
 width:15%;
 }
+a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+  }
 </style>
