--- a/_newsroom/Press Release/2010.md
+++ b/_newsroom/Press Release/2010.md
@@ -12,11 +12,17 @@ class="PressReleaseIcon">
 Releases</font><br><br>
 <font size="+2"><b>June</b></font><br>
 27 June 2010<br>
-[Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme](https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme)
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme">Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme</a>
 
 <style>
 img.PressReleaseIcon {
   height: 15%;
   width: 15%;
 }
+a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+  }
 </style>
