--- a/_newsroom/Press Release/2010.md
+++ b/_newsroom/Press Release/2010.md
@@ -10,7 +10,7 @@ class="PressReleaseIcon">
 <br>
 <font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press
 Releases</font><br><br>
-<font size="+2"><b>June</b></font><br>
+<font size="+2"><b>June 2010</b></font><br>
 27 June 2010<br>
 <a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme">Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme</a>
 
