--- a/_newsroom/Press Release/2009.md
+++ b/_newsroom/Press Release/2009.md
@@ -12,11 +12,17 @@ class="PressReleaseIcon">
 size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 <font size="+2"><b>February 2019</b></font><br>
 28 February 2019<br>
-[271,000 employees to receive $343 million in Workfare for work done in 2008](https://www.mom.gov.sg/newsroom/press-releases/2009/271000-employees-to-receive-343-million-in-workfare-for-work-done-in-2008)
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2009/271000-employees-to-receive-343-million-in-workfare-for-work-done-in-2008">271,000 employees to receive $343 million in Workfare for work done in 2008</a>
 
 <style>
 img.PressReleaseIcon {
   height: 15%;
   width: 15%;
 }
+a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+  }
 </style>
