--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -13,25 +13,32 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 <font size="+2"><b>December 2007</b></font><br>
 28 December 2007<br>
-[287,000 Workers to Receive $146 Million in Workfare Income Supplements on 1 Jan 2008](https://www.mom.gov.sg/newsroom/press-releases/2007/287000-workers-to-receive-146-million-in-workfare-income-supplements-on-1-jan-2008)
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/287000-workers-to-receive-146-million-in-workfare-income-supplements-on-1-jan-2008">287,000 Workers to Receive $146 Million in Workfare Income Supplements on 1 Jan 2008</a>
 
 <font size="+2"><b>November 2007</b></font><br>
 14 November 2007<br>
-[Revised Annual Value (AV) Cut-Off for Workfare Income Supplement Payments in 2009](https://www.mom.gov.sg/newsroom/press-releases/2007/revised-annual-value-av-cutoff-for-workfare-income-supplement-payments-in-2009)
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/revised-annual-value-av-cutoff-for-workfare-income-supplement-payments-in-2009">Revised Annual Value (AV) Cut-Off for Workfare Income Supplement Payments in 2009</a>
 
 <font size="+2"><b>August 2007</b></font><br>
 28 August 2007<br>
-[Low-wage SEPs and Informal Workers Can Register at Singapore Post Branches to Qualify for Workfare Income Supplements](https://www.mom.gov.sg/newsroom/press-releases/2007/low-wage-seps-and-informal-workers-can-register-at-singapore-post-branches-to-qualify-for-workfare-income-supplements)
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/low-wage-seps-and-informal-workers-can-register-at-singapore-post-branches-to-qualify-for-workfare-income-supplements">Low-wage SEPs and Informal Workers Can Register at Singapore Post Branches to Qualify for Workfare Income Supplements</a>
+
 <font size="+2"><b>February 2007</b></font><br>
 16 February 2007<br>
-[CPF Changes and Workfare for Low Wage Workers](https://www.mom.gov.sg/newsroom/press-releases/2007/cpf-changes-and-workfare-for-low-wage-workers)
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/cpf-changes-and-workfare-for-low-wage-workers">CPF Changes and Workfare for Low Wage Workers</a>
 
 <font size="+2"><b>January 2007</b></font><br>
 30 January 2007<br>
-[Declarations for Final Portion of Workfare Bonus Scheme to Begin on 1 February 2007](https://www.mom.gov.sg/newsroom/press-releases/2007/declarations-for-final-portion-of-workfare-bonus-scheme-to-begin-on-1-february-2007)
+<a class="hyperlink" href="Declarations for Final Portion of Workfare Bonus Scheme to Begin on 1 February 2007https://www.mom.gov.sg/newsroom/press-releases/2007/declarations-for-final-portion-of-workfare-bonus-scheme-to-begin-on-1-february-2007"></a>
 <style>
 img.PressReleaseIcon {
   height: 15%;
   width: 15%;
 }
+a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+  }
 </style>
