--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -9,7 +9,7 @@ src="/images/icons/ico_media_articles.png"
 class="PressReleaseIcon">
 <br>
 <font align="center" color="green"
-size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br>
 
 <font size="+2"><b>December 2007</b></font><br style="content:''; padding: 5px 0;"/>
 28 December 2007<br>
