--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -9,8 +9,7 @@ src="/images/icons/ico_media_articles.png"
 class="PressReleaseIcon">
 <br>
 <font align="center" color="green"
-size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br>
-
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br style="content:''; padding: 1px 0;"/>
 <font size="+2"><b>December 2007</b></font><br style="content:''; padding: 1px 0;"/>
 28 December 2007<br>
 <a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/287000-workers-to-receive-146-million-in-workfare-income-supplements-on-1-jan-2008">287,000 Workers to Receive $146 Million in Workfare Income Supplements on 1 Jan 2008</a>
