--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -6,11 +6,9 @@ third_nav_title: Media Articles
 ---
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Media Articles</font>
 <br><br><br>
-<font size="+2"><b>November 2019</b></font><br><br>
+<font size="+2"><b>November 2019</b></font><br>
 22 November 2019<br>
 <a class="hyperlink" href="http://www.workfare.gov.sg/Media%20Articles/Documents/More%20income%20relief%20for%20lower-wage%20workers%20during%20Covid19%20crisis.pdf">More income relief for lower-wage workers during Covid19 crisis, says Zaqy Mohamad (600KB)</a>
-
-
 
 <style>
 img.PressReleaseIcon {
