--- a/_newsroom/Media Articles/2018.md
+++ b/_newsroom/Media Articles/2018.md
@@ -6,10 +6,11 @@ third_nav_title: Media Articles
 ---
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Media Articles</font>
 <br><br><br>
-<font size="+2"><b>December 2018</b></font><br><br>
+<font size="+2"><b>December 2018</b></font><br>
 18 December 2018<br>
-<a class="hyperlink" href="/files/pdf-media-articles/2018/Workfare%20and%20other%20support%20measures%20have%20uplifted%20low-wage%20workers.pdf">Workfare and other support measures have uplifted low-wage workers (336KB)</a><br><br>
-<font size="+2"><b>November 2018</b></font><br><br>
+<a class="hyperlink" href="/files/pdf-media-articles/2018/Workfare%20and%20other%20support%20measures%20have%20uplifted%20low-wage%20workers.pdf">Workfare and other support measures have uplifted low-wage workers (336KB)</a>
+
+<font size="+2"><b>November 2018</b></font><br>
 7 November 2018<br>
 <a class="hyperlink" href="/files/pdf-media-articles/2018/Workfare%20and%20the%20Singapore%20approach%20to%20tackling%20wage%20inequality.pdf
 ">Workfare and the Singapore approach to tackling wage inequality (209KB)</a>
