--- a/_newsroom/Speeches/2014.md
+++ b/_newsroom/Speeches/2014.md
@@ -4,4 +4,22 @@ permalink: /newsroom/Speeches/permalink
 description: ""
 third_nav_title: Speeches
 ---
+<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
+<br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
+<font size="+2"><b>June 2014</b></font><br>
 
+18 June 2014<br>
+<a class="hyperlink" href="/files/pdf-speeches/2020/april/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf">Keynote Speech By Dr Amy Khor, Senior Minister Of State For Health And Manpower, At The Age Management Seminar – “effective Workplaces: Creating A Flexible, Inclusive, Safe And Healthy Workplace”, At Raffles City Convention Centre, On Wednesday 18 June 2014</a>
+<style>
+img.MicIcon {
+  height: 15%;
+  width: 15%;
+}
+a.hyperlink {
+	color:green;
+	}
+	  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+}
+</style>
