--- a/_newsroom/Speeches/2014.md
+++ b/_newsroom/Speeches/2014.md
@@ -9,7 +9,7 @@ third_nav_title: Speeches
 <font size="+2"><b>June 2014</b></font><br>
 
 18 June 2014<br>
-<a class="hyperlink" href="/files/pdf-speeches/2020/april/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf">Keynote Speech By Dr Amy Khor, Senior Minister Of State For Health And Manpower, At The Age Management Seminar – “effective Workplaces: Creating A Flexible, Inclusive, Safe And Healthy Workplace”, At Raffles City Convention Centre, On Wednesday 18 June 2014</a>
+<a class="hyperlink" href=http://www.ssg-wsg.gov.sg/speeches/18_Jun_2014.html>Keynote Speech By Dr Amy Khor, Senior Minister Of State For Health And Manpower, At The Age Management Seminar – “effective Workplaces: Creating A Flexible, Inclusive, Safe And Healthy Workplace”, At Raffles City Convention Centre, On Wednesday 18 June 2014</a>
 <style>
 img.MicIcon {
   height: 15%;
