--- a/_newsroom/Speeches/2013.md
+++ b/_newsroom/Speeches/2013.md
@@ -9,7 +9,8 @@ third_nav_title: Speeches
 <font size="+2"><b>February 2013</b></font><br>
 
 25 February 2013<br>
-<a class="https://www.mof.gov.sg/singaporebudget">Singapore Budget 2013 Speech by DPM Tharman Shanmugaratnam</a>
+<a class="hyperlink" href="https://www.mof.gov.sg/singaporebudget">Singapore Budget 2013 Speech by DPM Tharman Shanmugaratnam
+</a>
 <style>
 img.MicIcon {
   height: 15%;
