--- a/_newsroom/Speeches/2012.md
+++ b/_newsroom/Speeches/2012.md
@@ -4,3 +4,23 @@ permalink: /newsroom/Speeches/permalink
 description: ""
 third_nav_title: Speeches
 ---
+<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
+<br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
+<font size="+2"><b>September 2012</b></font><br>
+
+20 September 2012<br>
+<a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/20_Sep_2012.htmlt">Keynote Address by Deputy Prime Minister Tharman Shanmugaratnam & Minister for Finance at Singapore Human Capital Summit 2012, 19 September 2012, Compass Ballroom, Resorts World Sentosa
+</a>
+<style>
+img.MicIcon {
+  height: 15%;
+  width: 15%;
+}
+a.hyperlink {
+	color:green;
+	}
+	  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+}
+</style>
