--- a/_newsroom/Speeches/2009.md
+++ b/_newsroom/Speeches/2009.md
@@ -55,3 +55,19 @@ a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+
+11 February 2009<br>
+<a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/11_Feb_20091.html">Speech by Dr Yaacob Ibrahim, Minister for the Environment and Water Resources & Minister-in-charge of Muslim Affairs at the FY 2009 Committee for Supply Debate, 11 February 2009</a>
+<style>
+img.MicIcon {
+  height: 15%;
+  width: 15%;
+}
+a.hyperlink {
+	color:green;
+	}
+	  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+}
+</style>
