--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -23,3 +23,18 @@ a.hyperlink {
 	color:green
 }
 </style>
+
+<font size="+2"><b>February 2019</b></font><br>
+
+18 February 2019<br>
+<a class="hyperlink" href="http://www.workfare.gov.sg/Speeches/Documents/FY2019%20Budget%20Statement.pdf">Singapore Budget 2019 Speech by Finance Minister Heng Swee Keat</a>
+
+<style>
+img.MicIcon {
+  height: 15%;
+  width: 15%;
+}
+a.hyperlink {
+	color:green
+}
+</style>
