--- a/_newsroom/Press Release/2010.md
+++ b/_newsroom/Press Release/2010.md
@@ -10,7 +10,47 @@ class="PressReleaseIcon">
 <br>
 <font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press
 Releases</font><br><br>
+
+<font size="+2"><b>July 2010</b></font><br>
+
+27 July 2010<br>
+<a class="hyperlink" href="http://www.ssg-wsg.gov.sg/new-and-announcements/2010/27_Jul_2010.html">More Courses for PMETs as CET focuses on Fostering Capability- and Productivity-driven Growth Beyond SPUR, which is ending in December 2010</a>
+
+<style>
+img.PressReleaseIcon {
+  height: 15%;
+  width: 15%;
+}
+a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+  }
+</style>
+
 <font size="+2"><b>June 2010</b></font><br>
+
+27 June 2010<br>
+<a class="hyperlink" href="https://www.ssg-wsg.gov.sg/new-and-announcements/2010/27_June_2010.html">Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme</a>
+
+27 June 2010<br>
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme">Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme</a>
+
+<style>
+img.PressReleaseIcon {
+  height: 15%;
+  width: 15%;
+}
+a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+  }
+</style>
+
+<font size="+2"><b>April 2010</b></font><br>
 27 June 2010<br>
 <a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme">Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme</a>
 
