--- a/_newsroom/Press Release/2010.md
+++ b/_newsroom/Press Release/2010.md
@@ -51,8 +51,8 @@ a.hyperlink:hover {
 </style>
 
 <font size="+2"><b>April 2010</b></font><br>
-27 June 2010<br>
-<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2010/lowwage-workers-and-employers-to-benefit-from-workfare-training-support-wts-scheme">Low-Wage Workers and Employers to Benefit from Workfare Training Support (WTS) Scheme</a>
+13 April 2010<br>
+<a class="hyperlink" href="http://www.ssg-wsg.gov.sg/new-and-announcements/2010/13_Apr_2010.html">WDA to steer CET offerings towards capability-driven and productivity growth in 2010</a>
 
 <style>
 img.PressReleaseIcon {
