--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -37,8 +37,10 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br style="content:''; pa
 <a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/cpf-changes-and-workfare-for-low-wage-workers">CPF Changes and Workfare for Low Wage Workers</a>
 
 <font size="+2"><b>January 2007</b></font><br style="content:''; padding: 1px 0;"/>
+
 30 January 2007<br>
-<a class="hyperlink" href="Declarations for Final Portion of Workfare Bonus Scheme to Begin on 1 February 2007https://www.mom.gov.sg/newsroom/press-releases/2007/declarations-for-final-portion-of-workfare-bonus-scheme-to-begin-on-1-february-2007"></a>
+<a class="hyperlink" href="http://www.mom.gov.sg/newsroom/press-releases/2007/declarations-for-final-portion-of-workfare-bonus-scheme-to-begin-on-1-february-2007">Declarations for Final Portion of Workfare Bonus Scheme to Begin on 1 February 2007</a>
+
 <style>
 img.PressReleaseIcon {
   height: 15%;
