--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -11,6 +11,18 @@ third_nav_title: Media Articles
 22 November 2019<br>
 <a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(English).pdf">Workfare - With You For A Better Tomorrow (English) </a>
 
+22 November 2019<br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Chinese).pdf">Workfare - With You For A Better Tomorrow (Chinese) </a>
+
+22 November 2019<br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Malay).pdf">Workfare - With You For A Better Tomorrow (Malay) </a>
+
+22 November 2019<br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Tamil).pdf">Workfare - With You For A Better Tomorrow (Tamil) </a>
+
+22 November 2019<br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(English).pdf">Workfare - With You For A Better Tomorrow (English) </a>
+
 <style>
 img.PressReleaseIcon {
   height: 15%;
