--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -9,19 +9,19 @@ third_nav_title: Media Articles
 <font size="+2"><b>November 2019</b></font><br>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(English).pdf">Workfare - With You For A Better Tomorrow (English) </a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(English).pdf">Workfare - With You For A Better Tomorrow (English) 2.3MB </a>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Chinese).pdf">Workfare - With You For A Better Tomorrow (Chinese) </a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Chinese).pdf">Workfare - With You For A Better Tomorrow (Chinese) 421B </a>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Malay).pdf">Workfare - With You For A Better Tomorrow (Malay) </a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Malay).pdf">Workfare - With You For A Better Tomorrow (Malay) 779KB </a>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Tamil).pdf">Workfare - With You For A Better Tomorrow (Tamil) </a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Tamil).pdf">Workfare - With You For A Better Tomorrow (Tamil) 306KB </a>
 
-22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(English).pdf">Workfare - With You For A Better Tomorrow (English) </a>
+21 November 2019<br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20Enhancements%202020.pdf">Workfare Enhancements 2020 </a>
 
 <style>
 img.PressReleaseIcon {
