--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -23,6 +23,11 @@ third_nav_title: Media Articles
 21 November 2019<br>
 <a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20Enhancements%202020.pdf">Workfare Enhancements 2020</a>
 
+<font size="+2"><b>March 2019</b></font><br>
+
+6 March 2019<br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/S%27pore%20way%20of%20helping%20better%20serves%20needs%20of%20low-wage%20workers.pdf">S'pore way of helping better serves needs of low-wage workers, 6 Mar 2019 </a>
+
 <style>
 img.PressReleaseIcon {
   height: 15%;
