--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -28,6 +28,11 @@ third_nav_title: Media Articles
 6 March 2019<br>
 <a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/S%27pore%20way%20of%20helping%20better%20serves%20needs%20of%20low-wage%20workers.pdf">S'pore way of helping better serves needs of low-wage workers, 6 Mar 2019 </a>
 
+<font size="+2"><b>February 2019</b></font><br>
+
+13 February 2019<br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/WhyWorkfareworksbetterforSG.pdf">Commentary - Why Workfare works better for Singapore than a minimum wage </a>
+
 <style>
 img.PressReleaseIcon {
   height: 15%;
