--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -9,29 +9,29 @@ third_nav_title: Media Articles
 <font size="+2"><b>November 2019</b></font><br>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(English).pdf">Workfare - With You For A Better Tomorrow (English) </a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(English).pdf">Workfare - With You For A Better Tomorrow (English) 2.3MB </a>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Chinese).pdf">Workfare - With You For A Better Tomorrow (Chinese)</a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Chinese).pdf">Workfare - With You For A Better Tomorrow (Chinese) 421B</a>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Malay).pdf">Workfare - With You For A Better Tomorrow (Malay)</a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Malay).pdf">Workfare - With You For A Better Tomorrow (Malay) 779KB</a>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Tamil).pdf">Workfare - With You For A Better Tomorrow (Tamil) </a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Tamil).pdf">Workfare - With You For A Better Tomorrow (Tamil) 306KB</a>
 
 21 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20Enhancements%202020.pdf">Workfare Enhancements 2020</a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20Enhancements%202020.pdf">Workfare Enhancements 2020 (1.03MB)</a>
 
 <font size="+2"><b>March 2019</b></font><br>
 
 6 March 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/S%27pore%20way%20of%20helping%20better%20serves%20needs%20of%20low-wage%20workers.pdf">S'pore way of helping better serves needs of low-wage workers, 6 Mar 2019 </a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/S%27pore%20way%20of%20helping%20better%20serves%20needs%20of%20low-wage%20workers.pdf">S'pore way of helping better serves needs of low-wage workers, 6 Mar 2019 (4.89MB) </a>
 
 <font size="+2"><b>February 2019</b></font><br>
 
 13 February 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/WhyWorkfareworksbetterforSG.pdf">Commentary - Why Workfare works better for Singapore than a minimum wage </a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/WhyWorkfareworksbetterforSG.pdf">Commentary - Why Workfare works better for Singapore than a minimum wage (353KB) </a>
 
 <style>
 img.PressReleaseIcon {
