--- a/_newsroom/Media Articles/2009.md
+++ b/_newsroom/Media Articles/2009.md
@@ -4,3 +4,22 @@ permalink: /newsroom/Media-Articles/permalink
 description: ""
 third_nav_title: Media Articles
 ---
+<img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Media Articles</font>
+<br><br><br>
+<font size="+2"><b> January 2009</b></font><br>
+
+30 January 2009<br>
+<a class="hyperlink" href="http://www.mom.gov.sg/newsroom/press-replies/2009/workfare-scheme-open-to-oddjob-parttime-workers">Workfare Scheme Open to Odd-Job, Part-Time Workers</a>
+
+<style>
+img.PressReleaseIcon {
+  height: 15%;
+  width: 15%;
+}
+a.hyperlink {
+    color:green;
+  }
+a.hyperlink:hover {
+    color:MediumVioletRed;
+}
+</style>
