--- a/_newsroom/Press Release/2022.md
+++ b/_newsroom/Press Release/2022.md
@@ -12,7 +12,7 @@ third_nav_title: Press Release
 <font size="+2"><b>February 2022</b></font><br>
 
 18 February 2022<br>
-<a class="hyperlink" href="/files/pdf-press-release/Feb%202022/Enhanced%20Workfare%20Income%20Supplement%20Scheme%20From%20Work%20Year%202023.pdf">Enhanced Workfare Income Supplement Scheme From Work Year 2023</a>
+<a class="hyperlink" href="/files/pdf-press-release/Feb%202022/Enhanced%20Workfare%20Income%20Supplement%20Scheme%20From%20Work%20Year%202023.pdf">Enhanced Workfare Income Supplement Scheme From Work Year 2023 (696KB)</a>
 <style>
 img.PressReleaseIcon {
   height: 15%;
