--- a/_newsroom/Press Release/2016.md
+++ b/_newsroom/Press Release/2016.md
@@ -13,7 +13,7 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 <font size="+2"><b>March 2016</b></font><br>
 
 24 March 2016<br>
-<a class="hyperlink" href="/files/pdf-press-release/mar-2016/Factsheet%20on%20Enhancements%20to%20Workfare.pdf">Factsheet on Enhancements to Workfare 39KB</a>
+<a class="hyperlink" href="/files/pdf-press-release/mar-2016/Factsheet%20on%20Enhancements%20to%20Workfare.pdf">Factsheet on Enhancements to Workfare (39KB)</a>
 
 <style>
 img.PressReleaseIcon {
