--- a/_newsroom/Speeches/2020.md
+++ b/_newsroom/Speeches/2020.md
@@ -4,12 +4,13 @@ permalink: /newsroom/Speeches/permalink
 description: ""
 third_nav_title: Speeches
 ---
-<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
+<html><img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
 <br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
 <font size="+2"><b>April 2020</b></font><br>
 
 7 April 2020<br>
 <a class="hyperlink" href="/files/pdf-speeches/2020/april/Speech%20by%20MOS%20Zaqy%20at%20Supplementary%20Budget%20Debate%202020.pdf">Speech by MOS Zaqy at Supplementary Budget Debate 2020 (152KB)</a>
+</html>
 <style>
 img.MicIcon {
   height: 15%;
