--- a/_newsroom/Speeches/2019.md
+++ b/_newsroom/Speeches/2019.md
@@ -4,6 +4,7 @@ permalink: /Newsroom/Speeches/2019
 description: ""
 third_nav_title: Speeches
 ---
+<html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
 <font size="+2"><b>April 2019</b></font><br>
 
@@ -28,7 +29,7 @@ a.hyperlink {
 
 18 February 2019<br>
 <a class="hyperlink" href="http://www.workfare.gov.sg/Speeches/Documents/FY2019%20Budget%20Statement.pdf">Singapore Budget 2019 Speech by Finance Minister Heng Swee Keat (837KB)</a>
-
+</html>
 <style>
 img.MicIcon {
   height: 15%;
