--- a/_newsroom/Speeches/2014.md
+++ b/_newsroom/Speeches/2014.md
@@ -4,7 +4,7 @@ permalink: /newsroom/Speeches/2014
 description: ""
 third_nav_title: Speeches
 ---
-
+<html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
 <br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
 <font size="+2"><b>June 2014</b></font><br>
@@ -24,3 +24,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
