--- a/_newsroom/Speeches/2016.md
+++ b/_newsroom/Speeches/2016.md
@@ -6,7 +6,7 @@ third_nav_title: Speeches
 ---
 <html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
-<font size="+2"><b>March 2016</b></font><br>
+<font size="+2"><b>March 2016</b></font><br><br>
 
 24 March 2016<br>
 <a class="hyperlink" href="/files/pdf-speeches/2016/march/FY2016%20Budget%20Statement.pdf
@@ -19,5 +19,8 @@ img.MicIcon {
 a.hyperlink {
 	color:green
 }
+a.hover {
+	color:#C71585;
+	}
 </style>
 </html>
