--- a/_newsroom/Speeches/2016.md
+++ b/_newsroom/Speeches/2016.md
@@ -19,8 +19,8 @@ img.MicIcon {
 a.hyperlink {
 	color:green
 }
-a.hover {
-	color:#C71585;
+a.hyperlink:hover {
+  color:MediumVioletRed;
 	}
 </style>
 </html>
