--- a/_newsroom/Speeches/2013.md
+++ b/_newsroom/Speeches/2013.md
@@ -4,10 +4,10 @@ permalink: /newsroom/Speeches/2013
 description: ""
 third_nav_title: Speeches
 ---
-
+<html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
 <br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
-<font size="+2"><b>February 2013</b></font><br>
+<font size="+2"><b>February 2013</b></font><br><br>
 
 25 February 2013<br>
 <a class="hyperlink" href="https://www.mof.gov.sg/singaporebudget">Singapore Budget 2013 Speech by DPM Tharman Shanmugaratnam
@@ -20,8 +20,8 @@ img.MicIcon {
 a.hyperlink {
 	color:green;
 	}
-	  }
 a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
