--- a/_newsroom/Speeches/2010.md
+++ b/_newsroom/Speeches/2010.md
@@ -13,7 +13,7 @@ third_nav_title: Speeches
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/02_Nov_2010.html">Speech by Deputy Prime Minister Teo Chee Hean at The WSQ Partnership Night held on 02 November 2010, 6:00pm At Shangri-La Hotel, Island Ballroom
 </a><br><br>
 
-<b>July 2010</b></font><br><br>
+<font size="+2"><b>July 2010</b></font><br><br>
 
 27 July 2010<br>
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/27_Jul_2010.htmll">Speech by Mr. Gan Kim Yong, Minister for Manpower, at the Precision Engineering WSQ Diploma Graduation Ceremony at 3.00 PM on 27 July 2010 at the Singapore Polytechnic
