--- a/_newsroom/Press Release/2019.md
+++ b/_newsroom/Press Release/2019.md
@@ -4,6 +4,7 @@ permalink: /newsroom/Press-Release/2019
 description: ""
 third_nav_title: Press Release
 ---
+<html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
 <font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
@@ -42,3 +43,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
   }
 </style>
+</html>
