--- a/_newsroom/Press Release/2016.md
+++ b/_newsroom/Press Release/2016.md
@@ -4,13 +4,14 @@ permalink: /newsroom/Press-Release/2016
 description: ""
 third_nav_title: Press Release
 ---
+<html>
 <img align="left"
 src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
 <font align="center" color="green"
 size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
-<font size="+2"><b>March 2016</b></font><br>
+<font size="+2"><b>March 2016</b></font><br><br>
 
 24 March 2016<br>
 <a class="hyperlink" href="/files/pdf-press-release/mar-2016/Factsheet%20on%20Enhancements%20to%20Workfare.pdf">Factsheet on Enhancements to Workfare (39KB)</a>
@@ -27,3 +28,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
   }
 </style>
+</html>
