--- a/_newsroom/Speeches/2009.md
+++ b/_newsroom/Speeches/2009.md
@@ -4,19 +4,20 @@ permalink: /newsroom/Speeches/2009
 description: ""
 third_nav_title: Speeches
 ---
+<html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
 <br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
-<font size="+2"><b>February 2009</b></font><br>
-
+<font size="+2"><b>February 2009</b></font><br><br>
+	
 13 February 2009<br>
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/13_Feb_2009.html">Committee of Supply (Speech 1) by Acting Minister for Manpower Mr Gan Kim Yong, 13 February 2009, Parliament</a><br><br>
-
+	
 13 February 2009<br>
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/13_Feb_20091.html">Committee of Supply (Speech 2) by Acting Minister for Manpower Mr Gan Kim Yong, 13 February 2009, Parliament</a><br><br>
 
 13 February 2009<br>
 <a class="hyperlink" href="https://www.ssg-wsg.gov.sg/speeches/13_Feb_20092.html">Committee of Supply (Speech 3) by Senior Parliamentary Secretary Mr Hawazi Daipi, 13 February 2009, Parliament</a><br><br>
-
+	
 11 February 2009<br>
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/11_Feb_20091.html">Speech by Dr Yaacob Ibrahim, Minister for the Environment and Water Resources & Minister-in-charge of Muslim Affairs at the FY 2009 Committee for Supply Debate, 11 February 2009</a>
 <style>
@@ -31,3 +32,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
