--- a/_newsroom/Speeches/2014.md
+++ b/_newsroom/Speeches/2014.md
@@ -9,7 +9,7 @@ third_nav_title: Speeches
 <br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
 <font size="+2"><b>June 2014</b></font><br><br>
 18 June 2014<br>
-<a class="hyperlink" href=http://www.ssg-wsg.gov.sg/speeches/18_Jun_2014.html>Keynote Speech By Dr Amy Khor, Senior Minister Of State For Health And Manpower, At The Age Management Seminar – “effective Workplaces: Creating A Flexible, Inclusive, Safe And Healthy Workplace”, At Raffles City Convention Centre, On Wednesday 18 June 2014</a>
+<a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/18_Jun_2014.html">Keynote Speech By Dr Amy Khor, Senior Minister Of State For Health And Manpower, At The Age Management Seminar – “effective Workplaces: Creating A Flexible, Inclusive, Safe And Healthy Workplace”, At Raffles City Convention Centre, On Wednesday 18 June 2014</a>
 <style>
 img.MicIcon {
   height: 15%;
