--- a/_newsroom/Press Release/2019.md
+++ b/_newsroom/Press Release/2019.md
@@ -12,13 +12,13 @@ third_nav_title: Press Release
 <font size="+2"><b>December 2019</b></font><br><br>
 
 4 December 2019<br>
-<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-English.pdf">Workfare Factsheet (English) (151KB)</a><br>
+<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-English.pdf">Workfare Factsheet (English) (151KB)</a><br><br>
 
 4 December 2019<br>
-<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Chinese.pdf">Workfare Factsheet (Chinese) (265KB)</a><br>
+<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Chinese.pdf">Workfare Factsheet (Chinese) (265KB)</a><br><br>
 
 4 December 2019<br>
-<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Malay.pdf">Workfare Factsheet (Malay) (151KB)</a><br>
+<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Malay.pdf">Workfare Factsheet (Malay) (151KB)</a><br><br>
 
 4 December 2019 <br>
 <a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Tamil.pdf">Workfare Factsheet (Tamil) (885KB)</a><br><br>
