--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -18,19 +18,19 @@ size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br>
 
 <font size="+2"><b>November 2007</b></font><br><br>
 14 November 2007<br>
-<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/revised-annual-value-av-cutoff-for-workfare-income-supplement-payments-in-2009">Revised Annual Value (AV) Cut-Off for Workfare Income Supplement Payments in 2009</a>
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/revised-annual-value-av-cutoff-for-workfare-income-supplement-payments-in-2009">Revised Annual Value (AV) Cut-Off for Workfare Income Supplement Payments in 2009</a><br><br>
 
 <font size="+2"><b>August 2007</b></font><br><br>
 28 August 2007<br>
-<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/low-wage-seps-and-informal-workers-can-register-at-singapore-post-branches-to-qualify-for-workfare-income-supplements">Low-wage SEPs and Informal Workers Can Register at Singapore Post Branches to Qualify for Workfare Income Supplements</a>
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/low-wage-seps-and-informal-workers-can-register-at-singapore-post-branches-to-qualify-for-workfare-income-supplements">Low-wage SEPs and Informal Workers Can Register at Singapore Post Branches to Qualify for Workfare Income Supplements</a><br><br>
 
 <font size="+2"><b>May 2007</b></font><br><br>
 17 May 2007<br>
-<a class="hyperlink" href="http://www.ssg-wsg.gov.sg/new-and-announcements/2007/17_May_2007.html">Final Report of the Tripartite Committee on Older Workers</a>
+<a class="hyperlink" href="http://www.ssg-wsg.gov.sg/new-and-announcements/2007/17_May_2007.html">Final Report of the Tripartite Committee on Older Workers</a><br><br>
 
 <font size="+2"><b>February 2007</b></font><br><br>
 16 February 2007<br>
-<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/cpf-changes-and-workfare-for-low-wage-workers">CPF Changes and Workfare for Low Wage Workers</a>
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-releases/2007/cpf-changes-and-workfare-for-low-wage-workers">CPF Changes and Workfare for Low Wage Workers</a><br><br>
 
 <font size="+2"><b>January 2007</b></font><br><br>
 30 January 2007<br>
