--- a/_newsroom/Media Articles/2018.md
+++ b/_newsroom/Media Articles/2018.md
@@ -10,7 +10,7 @@ third_nav_title: Media Articles
 <font size="+2"><b>December 2018</b></font><br><br>
 
 18 December 2018<br>
-<a class="hyperlink" href="/files/pdf-media-articles/2018/Workfare%20and%20other%20support%20measures%20have%20uplifted%20low-wage%20workers.pdf">Workfare and other support measures have uplifted low-wage workers (336KB)</a>
+<a class="hyperlink" href="/files/pdf-media-articles/2018/Workfare%20and%20other%20support%20measures%20have%20uplifted%20low-wage%20workers.pdf">Workfare and other support measures have uplifted low-wage workers (336KB)</a><br><br>
 
 <font size="+2"><b>November 2018</b></font><br><br>
 
