--- a/_newsroom/Media Articles/2010.md
+++ b/_newsroom/Media Articles/2010.md
@@ -4,10 +4,10 @@ permalink: /newsroom/Media-Articles/2010
 description: ""
 third_nav_title: Media Articles
 ---
-
+<html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Media Articles</font>
 <br><br><br>
-<font size="+2"><b> September 2010</b></font><br>
+<font size="+2"><b> September 2010</b></font><br><br>
 
 22 September 2010<br>
 <a class="hyperlink" href="http://www.mom.gov.sg/newsroom/press-replies/2010/wages-workfares-the-long-term-answer">Wages: Workfare's the long-term answer</a>
@@ -24,3 +24,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
